<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="null_string" translatable="false"/>
    <string name="catalog_name" translatable="false">ZenUI-SuperNote</string>
    <string name="sync_setting_account_key" translatable="false">sync_setting_account_key</string>
    <string name="sync_setting_auto_key" translatable="false">sync_setting_auto_key</string>
    <string name="sync_setting_auto_frequency_key" translatable="false">sync_setting_auto_frequency_key</string>
    <string name="load_fota_data" translatable="false">load fota data</string>
    <string name="move_fota_data" translatable="false">move fota data</string>
    <string name="next" description="Next" maxwidth="">Next</string>
    <string name="preview_text_only" description="Share text only [MAX=16]" maxwidth="">Share text only</string>
    <string name="preview_hide_grid" description="Hide grid [MAX=10]" maxwidth="">Hide grid</string>
    <string name="preview_size" description="Size: [MAX=5]" maxwidth="">Size: </string>
    <string name="set_reg_info" description="About SuperNote" maxwidth="">About SuperNote</string>
    <string name="set_on" description="On" maxwidth="">On</string>
    <string name="set_off" description="Off" maxwidth="">Off</string>
    <string name="set_readOnly" description="Reading mode as default" maxwidth="">Reading mode</string>
    <string name="app_name">SuperNote</string>
    <string name="setting" description="Settings" maxwidth="">Settings</string>
    <string name="pg_del_count" description="Show how many pages has been deleted" maxwidth="">%s page(s) have been deleted</string>
    <string name="pg_copy_confirm" description="Copy page(s) to " maxwidth="">Copy page(s) to</string>
    <string name="pg_move_count" description="Show how many pages has been moved" maxwidth="">Move %d page(s) to </string>
    <string name="nb_name_hint" description="Notebook Name" maxwidth="">Notebook name</string>
    <string name="pagecolor" description="Page Color" maxwidth="">Page color</string>
    <string name="password" description="Password" maxwidth="">Password</string>
    <string name="password_tips" description="Please input 4 to 7 characters/digits password." maxwidth="">Please input 4 to 7 characters/digits.</string>
    <string name="password_oldpin" description="Current password" maxwidth="">Current password</string>
    <string name="password_newpin" description="New password" maxwidth="">New password</string>
    <string name="password_tryagain" description="Confirm new password" maxwidth="">Confirm new password</string>
    <string name="password_hint" description="Attention: (1) Password can be 4 to 7 position numbers and/or characters. (2) Change the password to 0000 will clear it and clear the Hide/Unhide function." maxwidth="">Attention: password can be 4 to 7 characters (letters or numbers).</string>
    <string name="password_set" description="Set/Change password" maxwidth="">Set/Change password</string>
    <string name="password_diff_password" description="Passwords do not match." maxwidth="">Passwords do not match.</string>
    <string name="share_to" description="Share to..." maxwidth="">Share to</string>
    <string name="password_mail_subject" description="SuperNote password" maxwidth="">SuperNote password</string>
    <string name="password_mail_content" description="On 2011/01/01 the password of my SuperNote was changed. The new password is: AAAA" formatted="false" maxwidth="">On %s, the password of my SuperNote was changed. The new password is: %s</string>
    <string name="choose_a_template" description="choose a template for your notebook" maxwidth="">Choose a template for your notebook</string>
    <string name="name" description="Name" maxwidth="">Name</string>
    <string name="del" description="Delete" maxwidth="">Delete</string>
    <string name="prompt_import" description="Import..." maxwidth="">Start to import from</string>
    <string name="pg_import" description="Import Notes" maxwidth="">Import notebook</string>
    <string name="prompt_err_open" description="The open method associated with this file is not found" maxwidth="">The open method associated with this file is not found</string>
    <string name="prompt_import_ok" description="Import successful!" maxwidth="">Import successful!</string>
    <string name="prompt_import_err" description="Import failed. The file is corrupt." maxwidth="">Import failed. The file is corrupt.</string>
    <string name="pg_move_to" description="Move to" maxwidth="">Move to</string>
    <string name="pg_copy_to" description="Copy to" maxwidth="">Copy to</string>
    <string name="pg_del" description="Delete selected Page(s)?" maxwidth="">Delete selected page(s)?</string>
    <string name="pg_select_all" description="Select all Page(s)?" maxwidth="">Select all</string>
    <string name="pg_deselect_all" description="Deselect all Page(s)?" maxwidth="">Deselect all</string>
    <string name="pg_move" description="move the page(s)" maxwidth="">Move the page(s)</string>
    <string name="memo_del" description="Deleted memo">Delete the selected memo(s)?</string>
    <string name="slash" translatable="false">/</string>
    <string name="memo_not_exists" description="no memo in SuperNote">Memo is empty</string>
    <string name="book_grid_title" description="the title of the page display property">Line style</string>
    <string name="pg_copy" description="copy the page(s)" maxwidth="">Copy the page(s)</string>
    <string name="wrong_file_type" description="wrong_file_type">You are opening the wrong type of file</string>
    <string name="prompt_move_pages" description="Long press on the page and drag to re-order pages." maxwidth="">Long press on the page and drag to reorder pages</string>
    <string name="pg_move_confirm" description="Move page(s) to " maxwidth="">Move page(s) to</string>
    <string name="pg_not_exist" description="The page does not exist" maxwidth="">The page does not exist</string>
    <string name="pg_warning_at_last" description="pg_warning_at_last" maxwidth="">The last page</string>
    <string name="pg_warning_at_start" description="pg_warning_at_start" maxwidth="">The first page</string>
    <string name="phone_book_name" description="Phone book name">Phonebook</string>
    <string name="pg_create_page" description="new a page" maxwidth="">New page</string>
    <string name="clear_all_alert" description="Can't undo after clear all">Are you sure you want to delete all the drawings? This action cannot be undone.</string>
    <string name="delete_alert" description="warning of deleting">Do you want to delete the drawing?</string>
    <string name="editor_bottom_hint_selected_mode" description="editor_bottom_hint_selected_mode">Use your finger to move or resize the object</string>
    <string name="editor_bottom_hint_selected_mode_nothing_selected">Tap to select or drag an object or multiple objects.</string>
    <string name="editor_page_is_full" description="editor_page_is_full">This page is full</string>
    <string name="editor_pen_dialog_title" description="editor_pen_dialog_title">Brush color &amp; thickness</string>
    <string name="editor_share_to_dialog_nothidg" description="editor_share_to_dialog_nothidg">This page is empty</string>
    <string name="editor_menu_share">Share</string>
    <string name="editor_menu_bookmark" description="[MAX=12]" maxwidth="">Bookmark</string>
    <string name="editor_menu_readonly" description="[MAX=12]" maxwidth="">Read only</string>
    <string name="nb_name_default" description="Notebook Default Name" maxwidth="">Notebook</string>
    <string name="warning_activity_not_found" description="Activity not found">Your device does not support this file type or codec type</string>
    <string name="warning_no_data_has_been_copy" description="no clipboard data">There is no image in the clipboard to paste</string>
    <string name="remove_from_jump" description="Remove from jump" maxwidth="">Remove</string>
    <string-array name="pg_size">
        <item>Pad</item>
        <item>Phone</item>
    </string-array>
    <string name="add_new" description="Add New Notebook" maxwidth="7">Add a new notebook</string>
    <string name="pg_copy_count" description="Show how many pages has been copied" formatted="false" maxwidth="">%d page(s) have been copied to %s</string>
    <string name="page_size" description="Page Size" maxwidth="">Page size</string>
    <string name="white" description="the background color of the notebook" maxwidth="">White</string>
    <string name="yellow" description="the background color of the notebook" maxwidth="">Yellow</string>
    <string name="book_grid_line" description="the background style of the notebook">Lines</string>
    <string name="nb_property" description="Show the information of the notebook [MAX=18]" maxwidth="">Show notebook info</string>
    <string name="editor_func_button_copy" description="editor_func_button_copy [MAX=5]" maxwidth="">Copy</string>
    <string name="editor_func_button_cut" description="editor_func_button_cut [MAX=5]" maxwidth="">Cut</string>
    <string name="editor_func_button_editable" description="editor_func_button_editable [MAX=5]" maxwidth="">Edit</string>
    <string name="editor_func_button_paste" description="editor_func_button_paste [MAX=5]" maxwidth="">Paste</string>
    <string name="editor_func_button_delete" description="editor_func_button_delete [MAX=5]" maxwidth="">Delete</string>
    <string name="rename" description="Rename the notebook [MAX=18]" maxwidth="">Rename</string>
    <string name="nb_del" description="Delete the notebook [MAX=18]" maxwidth="">Delete</string>
    <string name="nb_export" description="Export the notebook [MAX=18]" maxwidth="">Export</string>
    <string name="nb_sync">Enable cloud sync</string>
    <string name="nb_async">Cancel cloud sync</string>
    <string name="sync_account_text">Account</string>
    <string name="account_space_usage">Used space</string>
    <string name="sync_setting_auto">Auto-Sync</string>
    <string name="sync_setting_auto_frequency">Auto-Sync frequency</string>
    <string name="sync_auto_interval_15">Every 15 mins</string>
    <string name="export_supernote_format">Export as SuperNote format</string>
    <string name="editor_func_button_search">Search</string>
    <string name="nb_Write_Text_Recognition" description="Write_Text_Recognition [MAX=18]" maxwidth="">Write text recognition</string>
   <string name="export">Export</string>
    <string name="Sort">Sort</string>
    <string name="nb_lock" description="Lock the notebook [MAX=18]" maxwidth="">Lock</string>
    <string name="nb_unhide" description="Unlock Notebook" maxwidth="">Unlock</string>
    <string name="nb_lock_hide" description="Lock to hide" maxwidth="">Lock to hide</string>
    <string name="export_pdf">Export as PDF</string>
    <string name="show_personal_notebook" description="show the notebooks whick be locked" maxwidth="-1">Show locked notebook </string>
   <string name="nb_editcover">Edit cover</string>
    <string name="page_copy" description="Copy the page" maxwidth="">Copy</string>
    <string name="page_move" description="Move the page" maxwidth="">Move</string>
    <string name="page_delete" description="Delete the page" maxwidth="">Delete</string>
    <string name="sync_setting_wifi_auto_key" translatable="false">sync_setting_wifi_auto_key</string>
    <string name="sync_setting_wifi_auto">Auto-Sync over WiFi only</string>
    <string name="settings_encourage_us_title" maxWidth="">Encourage us</string>
    <string name="force_permission_title">"Can’t access files"</string>
    <string name="force_permission_sub_title">"%1$s will need %2$s permission to access and save your files in the device."</string>
    <string name="force_permission_turn_on">"Turn on"</string>
</resources>